[package]
name = "resolve-nested-genotypes"
version = "0.1.0"
authors = ["Glenn Hickey <glenn.hickey@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-htslib = { version = "*", default-features = false }
indicatif = {version = "*"}
rayon = {version = "*"}
clap = "2.33.3"
